# health_tracker_cli_app

./: FINAL_TEST_REPORT.md  README.md  TESTING_REPORT.md  TESTING_SETUP.md  TESTS_FIXED_SUMMARY.md  create_tables.py  health_tracker.db  pyproject.toml  pytest.ini  run_tests.py  setup.py  test_db.py  test_report.py
myapp/cli/: __main__.py  food.py  goal.py  meal_plan.py  report.py  user.py
myapp/controllers/: food_entry_controlller.py  goal_controller.py  meal_plan_controller.py  report_controller.py  user_controller.py
myapp/db/: __init__.py  database.py  db.py
myapp/models/: __init__.py  food_entry.py  goal.py  meal_plan.py  user.py
tests/: README.md  conftest.py  test_all_cli_commands.py  test_cli_essential.py  test_essential.py
tests/test_cli/: test_food_cli.py  test_main_cli.py  test_user_cli.py
tests/test_controllers/: test_food_entry_controller.py  test_goal_controller.py  test_meal_plan_controller.py  test_report_controller.py  test_user_controller.py
tests/test_database/: test_database.py
tests/test_models/: test_food_entry.py  test_goal.py  test_meal_plan.py  test_user.py
